feat: implement user reset-password; fix error with user email verify; delete local test image
